terraform/main.tf

data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}

data "aws_route53_zone" "aws_route53_zone" {
  name         = "techinterviewsuk.com."
  private_zone = false
}

locals {
  domain_name = "bamboohr.techinterviewsuk.com"
}

resource "aws_security_group" "webserver_sg" {
  name        = "webserver_security_group"
  description = "The group allows ssh and ssl ports"
  vpc_id      = "vpc-0d5f0ec31dd773eda"

  ingress {
    description      = "TLS from VPC"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
 ingress {
    description      = "TLS from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
 ingress {
    description      = "TLS from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "webserver_security_group"
  }
}


resource "aws_instance" "web" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = "t2.micro"
  associate_public_ip_address = true
  vpc_security_group_ids =  [aws_security_group.webserver_sg.id]
  subnet_id  = "subnet-0d393b6cdba96e2ad"
  key_name = "interviews"

  root_block_device {
    delete_on_termination  = true
    encrypted = true
    volume_size = 20
    volume_type = "gp2"
  }

  tags = {
    Name = "webserver"
    Application = "webserver"
  }
}


resource "aws_route53_record" "www" {
  zone_id = data.aws_route53_zone.aws_route53_zone.zone_id
  name    = local.domain_name
  type    = "A"
  ttl     = 300
  records = [aws_instance.web.public_ip]
}
